--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vishnu Vijayan</title>
 
+    <link rel="stylesheet" href="css/jquery.fullPage.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
+    <div id="fullpage">
+    	<div id="section1" class="section">Some section</div>
+    	<div id="section2" class="section">Some section</div>
+    	<div class="section">Some section</div>
+    	<div class="section">Some section</div>
+    </div>
+
+    <!-- SCRIPTS -->
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous">
+    </script>
+    <!-- JQuery -->
+
+    <script src="js/jquery.fullPage.min.js"></script>
+    <!-- Fullpage -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+
+    <!-- Custon javascript -->
+    <script>
+        $(document).ready(function() {
+            $('#fullpage').fullpage();
+        });
+    </script>
 </body>
 </html>
