Fix aligning bug

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vishnu Vijayan</title>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Roboto:300,400,500,700" rel="stylesheet">
+
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -13,7 +16,23 @@
 <body>
 
     <div id="fullpage">
-    	<div id="section1" class="section">Some section</div>
+
+    	<div id="section1" class="section">
+    	    <div class="container">
+
+                <div class="background-row"></div>
+
+                <div class="row content-row">
+                    <div class="col-sm-2 hidden-sm"></div>
+
+                    <div class="col-sm-8">
+                        <h1>Vishnu Vijayan</h1>
+                        <h1>Web Developer | Software Engineer | Music Producer</h1>
+                    </div>
+                </div>
+    	    </div>
+    	</div>
+
     	<div id="section2" class="section">Some section</div>
     	<div class="section">Some section</div>
     	<div class="section">Some section</div>
