change background gradient

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vishnu Vijayan</title>
 
@@ -34,11 +34,10 @@
                         </p>
 
                         <div class="row" style="padding-top: 10px;">
-                            <div class="col-xs-1 sm-hidden"></div>
-                            <div class="col-xs-2">
-                                <a class="btn btn-outline-black">Resume</a>
-                            </div>
-                            <div class="col-xs-2">
+                            <div class="col-lg-1 visible-lg"></div>
+
+                            <div class="text-center col-lg-4 col-sm-12">
+                                <a class="btn btn-outline-black" style="margin-right: 20px;">Resume</a>
                                 <a class="btn btn-outline-black">GitHub</a>
                             </div>
                         </div>
