--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     	<div id="section1" class="section">
     	    <div class="container">
 
-                <div class="background-row"></div>
+                <div class="background-row visible-lg visible-md">
+                    <div id="section1-bg">
+                        <svg id="section1-img" src="img/crane.svg"></svg>
+                    </div>
+                </div>
 
                 <div class="row content-row">
 
@@ -34,14 +38,17 @@
                         </p>
 
                         <div class="row" style="padding-top: 10px;">
-                            <div class="col-lg-1 visible-lg"></div>
+                            <div class="col-lg-1 visible-lg visible-md"></div>
 
-                            <div class="text-center col-lg-4 col-sm-12">
+                            <div class="text-center col-lg-4 col-sm-12" >
                                 <a class="btn btn-outline-black" style="margin-right: 20px;">Resume</a>
                                 <a class="btn btn-outline-black">GitHub</a>
                             </div>
+
                         </div>
+
                     </div>
+
                 </div>
     	    </div>
     	</div>
@@ -65,6 +72,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
 
+    <script src="js/svg-injector.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.0/vivus.min.js"></script>
+    <!-- vivus svg -->
+
     <!-- Custon javascript -->
     <script>
         $(document).ready(function() {
@@ -72,17 +84,10 @@
                 verticalCentered: true
             });
 
-            $('.btn-6').on('mouseenter', function(e) {
-        		var parentOffset = $(this).offset(),
-          		relX = e.pageX - parentOffset.left,
-          		relY = e.pageY - parentOffset.top;
-        		$(this).find('span').css({top:relY, left:relX});
-            }).on('mouseout', function(e) {
-        		var parentOffset = $(this).offset(),
-          		relX = e.pageX - parentOffset.left,
-          		relY = e.pageY - parentOffset.top;
-            	$(this).find('span').css({top:relY, left:relX});
-            });
+            // Inject section 1 background
+            var bg1 = document.querySelectorAll('#section1-img');
+            SVGInjector(bg1);
+
         });
     </script>
 </body>
