Add projects page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,51 @@
     	    </div>
     	</div>
 
-    	<div id="section2" class="section">Some section</div>
+    	<div id="section2" class="section">
+            <div class="container">
+                <div class="row text-center">
+                    <h1>My Projects</h1>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="project-placeholder"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     	<div class="section">Some section</div>
     	<div class="section">Some section</div>
     </div>
@@ -66,6 +110,7 @@
     </script>
     <!-- JQuery -->
 
+    <script src="js/scrolloverflow.min.js"></script>
     <script src="js/jquery.fullPage.min.js"></script>
     <!-- Fullpage -->
 
@@ -73,6 +118,7 @@
     <!-- Bootstrap -->
 
     <script src="js/svg-injector.min.js"></script>
+    <!-- SVG injector -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.0/vivus.min.js"></script>
     <!-- vivus svg -->
@@ -81,7 +127,15 @@
     <script>
         $(document).ready(function() {
             $('#fullpage').fullpage({
-                verticalCentered: true
+                verticalCentered: true,
+                scrollOverflow: true,
+                navigation: true,
+                navigationPosition: 'left',
+                slidesNavigation: true,
+                afterLoad: function(anchorLink, index){
+            		var loadedSection = $(this);
+            		console.log('section '+index+' loaded');
+            	}
             });
 
             var injectorOptions = {
@@ -95,9 +149,7 @@
             // Inject section 1 background
 
             var bg1 = document.querySelectorAll('#section1-img');
-            SVGInjector(bg1, injectorOptions, function() {
-
-            });
+            SVGInjector(bg1, injectorOptions);
 
         });
     </script>
