Change name font

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vishnu Vijayan</title>
 
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Roboto:300,400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/jquery.fullPage.css">
@@ -29,7 +30,7 @@
                 <div class="row content-row">
 
                     <div class="col-sm-12 col-lg-10">
-                        <h1 style="text-transform: uppercase;">Vishnu Vijayan</h1>
+                        <h1 class="name">Vishnu Vijayan</h1>
                         <h1>Web Developer | Software Engineer | Music Producer</h1>
                         <p class="about-me">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
