Update page 2 styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap-material-design.css">
+    <link rel="stylesheet" href="css/ripples.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -71,39 +73,39 @@
 
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4 project-wrapper">
-                            <div class="project-placeholder"></div>
+                            <div class="project-placeholder well"></div>
                         </div>
 
                     </div>
@@ -129,6 +131,10 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
+
+    <script src="js/material.min.js"></script>
+    <script src="js/ripples.min.js"></script>
+    <!-- Material Design Bootstrap -->
 
     <script src="js/svg-injector.min.js"></script>
     <!-- SVG injector -->
@@ -163,7 +169,7 @@
                         SVGInjector(bg2, injectorOptions);
                         $('#section2-bg').show();
                         setTimeout(function() {
-                            $('#section2-bg').animate({'opacity': '0.05'});
+                            $('#section2-bg').animate({'opacity': '0.03'});
                         },8000);
                     }
 
