Put contents of first page in a well

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="row content-row">
 
-                    <div class="col-sm-12 col-lg-10">
+                    <div class="col-sm-12 col-lg-10 well well-rounded text-center">
                         <h1 class="name">Vishnu Vijayan</h1>
                         <h1>Web Developer | Software Engineer | Music Producer</h1>
                         <p class="about-me">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -42,13 +42,8 @@
                         </p>
 
                         <div class="row" style="padding-top: 10px;">
-                            <div class="col-lg-1 visible-lg visible-md"></div>
-
-                            <div class="text-center col-lg-4 col-sm-12" >
                                 <a class="btn btn-raised btn-primary" style="margin-right: 20px;">Resume</a>
                                 <a class="btn btn-raised btn-primary">GitHub</a>
-                            </div>
-
                         </div>
 
                     </div>
