--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="row content-row">
 
-                    <div class="col-sm-12 col-lg-10 well well-rounded text-center">
+                    <div id="about-content" class="col-sm-12 col-lg-10 well well-rounded text-center">
                         <h1 class="name">Vishnu Vijayan</h1>
                         <h1>Web Developer | Software Engineer | Music Producer</h1>
                         <p class="about-me">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -120,6 +120,9 @@
     </script>
     <!-- JQuery -->
 
+    <script src="js/mobile-checker.js"></script>
+    <!-- Check if device is mobile -->
+
     <script src="js/scrolloverflow.min.js"></script>
     <script src="js/jquery.fullPage.min.js"></script>
     <!-- Fullpage -->
@@ -141,6 +144,10 @@
     <script>
         $(document).ready(function() {
             $.material.init();
+
+            if(mobilecheck()) {
+                $('#about-content').removeClass('well').removeClass('well-rounded');
+            }
 
             var started = false;
             $('#fullpage').fullpage({
