--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <div id="section1-bg">
 
                 </div>
+
+                <div id="section1-gradient"></div>
             </div>
 
     	    <div class="container">
@@ -118,6 +120,25 @@
             $('#fullpage').fullpage({
                 verticalCentered: true,
                 scrollOverflow: true,
+                onLeave: function(index, nextIndex, direction) {
+                    if(nextIndex === 1) {
+                        //Transition to slide background-color
+                        $('body').css({
+                            'background-color': '#66BB6A'
+                        });
+                    } else if (nextIndex === 2) {
+                        //Transition to slide background-color
+                        $('body').css({
+                            'background-color': '#26C6DA'
+                        });
+                    }
+                } else if (nextIndex === 3) {
+                    //Transition to slide background-color
+                    $('body').css({
+                        'background-color': '#26A69A'
+                    });
+                }
+                },
                 afterLoad: function(anchorLink, index){
             		var loadedSection = $(this);
             		console.log("#section"+index+"-img");
@@ -132,6 +153,7 @@
                         SVGInjector(bg1, injectorOptions);
                         $('#section1-bg').show();
                     } else if(index === 2) {
+
                         $('#section2-img').remove();
                         $('#section2-bg').append('<img id="section2-img" src="img/ts_animated.svg"></img>');
                         var bg2 = document.querySelectorAll('#section2-img');
