--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400|Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -42,8 +44,8 @@
                         </p>
 
                         <div class="row" style="padding-top: 10px;">
-                                <a class="btn btn-raised btn-primary" style="margin-right: 20px;">Resume</a>
-                                <a class="btn btn-raised btn-primary">GitHub</a>
+                            <a class="btn btn-raised btn-primary" style="margin-right: 20px;">Resume <i class="fa fa-file white" aria-hidden="true"></i></a>
+                            <a class="btn btn-raised btn-primary">GitHub <i class="fa fa-github white" aria-hidden="true"></i></a>
                         </div>
 
                     </div>
@@ -76,7 +78,23 @@
             <div class="container">
                 <div class="row content-row">
                     <div class="col-sm-12 well well-rounded">
-                        <h1>sah dude</h1>
+                        <div class="row text-center"><h1>Skills</h1></div>
+
+                        <div class="row">
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-advanced text-center">
+                                    <i class="material-icons">settings</i>
+                                </div>
+
+                                <div class="col-sm-8 text-center">
+                                    <h2 class="skill-heading">Software Engineering</h2>
+                                    <h2 class="advanced">Advanced</h2>
+                                    <h2 class="tech">Java, Python, C, C++</h2>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,7 +157,7 @@
                     } else if (nextIndex === 3) {
                         //Transition to slide background-color
                         $('body').css({
-                            'background-color': '#FFCA28'
+                            'background-color': '#FFD54F'
                         });
                     }
                 },
