--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     	<div id="section3" class="section">
             <div class="container">
                 <div class="row content-row">
-                    <div class="col-sm-12 well well-rounded">
+                    <div id="skills-container" class="col-sm-12 well well-rounded">
                         <div class="row text-center"><h1>Skills</h1></div>
 
                         <div class="row">
@@ -87,10 +87,70 @@
                                     <i class="material-icons">settings</i>
                                 </div>
 
-                                <div class="col-sm-8 text-center">
+                                <div class="col-sm-9 text-center">
                                     <h2 class="skill-heading">Software Engineering</h2>
                                     <h2 class="advanced">Advanced</h2>
                                     <h2 class="tech">Java, Python, C, C++</h2>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-advanced text-center">
+                                    <i class="material-icons">build</i>
+                                </div>
+
+                                <div class="col-sm-9 text-center">
+                                    <h2 class="skill-heading">Tools</h2>
+                                    <h2 class="advanced">Advanced</h2>
+                                    <h2 class="tech">GitHub</h2>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-advanced text-center">
+                                    <i class="material-icons">important_devices</i>
+                                </div>
+
+                                <div class="col-sm-9 text-center">
+                                    <h2 class="skill-heading">Front-end web development</h2>
+                                    <h2 class="advanced">Advanced</h2>
+                                    <h2 class="tech">HTML, CSS, JavaScript, Bootstrap</h2>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-intermediate text-center">
+                                    <i class="material-icons">cloud_done</i>
+                                </div>
+
+                                <div class="col-sm-9 text-center">
+                                    <h2 class="skill-heading">Back-end web development</h2>
+                                    <h2 class="intermediate">Intermediate</h2>
+                                    <h2 class="tech">Flask (Python), NodeJS, Spark (Java)</h2>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-intermediate text-center">
+                                    <i class="material-icons">palette</i>
+                                </div>
+
+                                <div class="col-sm-9 text-center">
+                                    <h2 class="skill-heading">Design</h2>
+                                    <h2 class="intermediate">Intermediate</h2>
+                                    <h2 class="tech">Adobe Photoshop, Adobe Illustrator, Google SketchUp</h2>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6 col-lg-6 skill-card">
+                                <div class="col-sm-3 skill-icon skill-icon-beginner text-center">
+                                    <i class="fa fa-sitemap" aria-hidden="true"></i>
+                                </div>
+
+                                <div class="col-sm-9 text-center">
+                                    <h2 class="skill-heading">Machine Learning</h2>
+                                    <h2 class="beginner">Beginner</h2>
+                                    <h2 class="tech">Scikit, Numpy, Tensorflow</h2>
                                 </div>
                             </div>
 
@@ -136,6 +196,7 @@
 
             if(mobilecheck()) {
                 $('#about-content').removeClass('well').removeClass('well-rounded');
+                $('#skills-container').removeClass('well').removeClass('well-rounded');
                 $('#section2-bg').closest('div').remove();
             }
 
@@ -157,7 +218,7 @@
                     } else if (nextIndex === 3) {
                         //Transition to slide background-color
                         $('body').css({
-                            'background-color': '#FFD54F'
+                            'background-color': '#EEEEEE'
                         });
                     }
                 },
