Change skills page background color

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     } else if (nextIndex === 2) {
                         //Transition to slide background-color
                         $('body').css({
-                            'background-color': '#26C6DA'
+                            'background-color': '#00BCD4'
                         });
                     } else if (nextIndex === 3) {
                         //Transition to slide background-color
